--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "custom-react-scripts": "^0.2.1",
+    "lodash": "^4.17.4",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "react": "^16.1.0",
