--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && aws s3 cp build s3://clew-app/ --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
