--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "core-js": "^2.5.5",
     "custom-react-scripts": "^0.2.1",
     "lodash": "^4.17.4",
     "mobx": "^3.3.1",
@@ -11,6 +12,7 @@
     "react-dom": "^16.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-spinkit": "^3.0.0",
     "react-toastify": "^3.2.2",
     "semantic-ui-react": "^0.76.0"
   },
